<resources>

    <string name="app_name">Location History</string>

    <string name="persistent_notification_title">Beacon Active</string>
    <string name="persistent_notification_message">Normal operation</string>
    <string name="persistent_notification_high_accuracy_mode">High accuracy mode</string>

    <string name="permissions_title">Permissions</string>
    <string name="permissions_missing">Permissions Missing</string>
    <string name="schedule_error">Unable to schedule updates</string>
    <string name="permissions_warning">The app might not function properly without required permissions.</string>
    <string name="grant">Grant</string>
    <string name="fix">Fix</string>
    <string name="permission_desc_fine_location">Fine location</string>
    <string name="permission_exp_fine_location">Required to access your location</string>
    <string name="permission_desc_background_location">Background location</string>
    <string name="permission_exp_background_location">Required to access your location</string>
    <string name="permission_desc_post_notifications">Send notifications</string>
    <string name="permission_exp_post_notifications">Required for persistent notification</string>
    <string name="permission_desc_schedule_alarms">Schedule alarms</string>
    <string name="permission_exp_schedule_alarms">Required for scheduled location updates</string>
    <string name="permission_desc_ignore_optimisations">Background operation</string>
    <string name="permission_exp_ignore_optimisations">Required to reliably send location data in the background</string>

    <string name="server_host">Server Host</string>
    <string name="server_host_hint">e.g. my-server.com</string>
    <string name="server_port">Server Port</string>
    <string name="server_port_hint">e.g. 8080</string>

    <string name="test">Test</string>
    <string name="save">Save</string>
    <string name="unified_push">Unified Push</string>

    <string name="system">System</string>
    <string name="status_key">Status:</string>
    <string name="device_state_key">Device State:</string>
    <string name="last_ping_key">Last Ping:</string>

    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="unknown">unknown</string>
    <string name="never">never</string>

    <string name="invalid_response">Invalid response</string>

    <string name="toast_permission_denied">Required permission denied - app won\'t function properly</string>
    <string name="toast_connection_successful">Connection successful</string>
    <string name="toast_invalid_response">Invalid response message: %s</string>
    <string name="toast_connection_failed">Connection failed: %s</string>
    <string name="toast_invalid_settings">Invalid settings: %s</string>
    <string name="toast_saved">Saved</string>

    <string name="security_warning">Security Warning</string>
    <string name="message_ssl_prompt">"Please verify this fingerprint against your server's logs.\nOnly click trust if they match.\n\nFingerprint:\n%s"</string>
    <string name="trust_always">Trust Always</string>
    <string name="cancel">Cancel</string>

    <string name="update_frequency">Update Frequency</string>
    <string name="update_frequency_hint">Minutes</string>

    <string name="enable_unified_push">Enable UnifiedPush</string>
    <string name="select_distributor">Select a push distributor</string>
    <string name="unified_push_description">Enables real-time location requests and Find Device in the web UI</string>

    <string name="toast_register_push_handler_success">Registered push handler</string>
    <string name="toast_register_push_handler_failed">Registering push handler failed</string>
    <string name="toast_register_push_handler_error">Registration error: %s</string>
    <string name="toast_unregister_push_handler_success">Un-registered push handler</string>
    <string name="toast_unregister_push_handler_failed">Un-registering push handler failed</string>
    <string name="toast_unregister_push_handler_error">Un-registration error: %s</string>
    <string name="toast_no_push_distributors">No push distributors found</string>

    <string name="notification_alarm_title">Alarm Triggered</string>
    <string name="notification_alarm_description">Alarm triggered via Location History</string>

    <string name="location_providers">Location Providers</string>
    <string name="location_providers_description">Enable and reorder location providers. Drag to change priority. Note that the order will affect battery life (e.g. prioritising GPS over Network).</string>
    <string name="drag_to_reorder">Drag to reorder</string>

</resources>