<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:text="@string/status_key"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTextView"
                android:text="@string/disconnected"
                android:gravity="end" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:text="@string/device_state_key"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deviceStateTextView"
                android:text="@string/unknown"
                android:gravity="end" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <TextView
                android:text="@string/last_ping_key"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastPingTextView"
                android:text="@string/never"
                android:gravity="end" />
        </TableRow>

    </TableLayout>

</LinearLayout>